--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.1.0",
+    "vite": "7.2.4",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
     "clsx": "^2.1.0",
